<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.QuestionTwo">

    <TextView
        android:id="@+id/ques_two_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:fontFamily="sans-serif"
        android:text="@string/question_two"
        android:textSize="@dimen/twenty_sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <CheckBox
        android:id="@+id/option_one_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:text="@string/white"
        android:button="@drawable/custom_checkbox"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintTop_toBottomOf="@+id/ques_two_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/option_two_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:button="@drawable/custom_checkbox"
        android:text="@string/yellow"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintTop_toBottomOf="@+id/option_one_cb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/option_three_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:text="@string/orange"
        android:button="@drawable/custom_checkbox"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintTop_toBottomOf="@+id/option_two_cb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/option_four_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginStart="@dimen/eight_dp"
        android:button="@drawable/custom_checkbox"
        android:text="@string/green"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintTop_toBottomOf="@+id/option_three_cb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dp"
        android:background="@drawable/button_background"
        android:padding="@dimen/sixteen_dp"
        android:textColor="@color/white"
        android:text="@string/next_text"
        android:textSize="@dimen/twenty_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>